--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
 .controls .controls__colors{
     display: flex;
 }
-.controls__colors .controls__colors {
+.controls__colors .controls__color {
     width:50px;
     height: 50px;
     border-radius: 25px;
