--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,14 @@ body {
 }
 
 .controls{
-    margin-top: 50px;
+    margin-top: 25px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.input-btn{
+    margin-bottom: 10px;
     align-items: center;
 }
 .controls .controls__btns{
@@ -58,5 +63,5 @@ body {
 }
 
 .controls .controls__range{
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
